# TheTyper

./: .gitignore  LICENSE  README.md
TyperDesktop/: CMakeLists.txt  README.md
TyperDesktop/src/common/: Network.cpp  Network.h  TypeResult.h  WaitCoursor.h
TyperDesktop/src/common/settings/: SettingsFile.cpp  TyperSettings.cpp
TyperDesktop/src/gui/: EnterMenu.cpp  EnterMenu.h  MainWindow.cpp  MainWindow.h  SettingsWidget.h  TextEditRenderer.cpp  TextEditRenderer.h  TypeResultWidget.cpp  TypeResultWidget.h  TypeResultWidget.ui  TyperWidget.cpp  TyperWidget.h
TyperDesktop/src/gui/auth/: AuthentificationDialog.cpp  AuthentificationDialog.h  AuthentificationWidget.cpp  InputGroupBox.h  RegistrationDialog.cpp  RegistrationDialog.h  RegistrationWidget.h
TyperWords/: LICENSE  Makefile  README.md  dockerfile  go.mod  go.sum
TyperWords/cmd/wb/: main.go
TyperWords/internal/handler/: handler.go
TyperWords/internal/storage/: database.go
TyperWords/internal/storage/words/: ru_5000.txt
backend/: Cargo.toml
backend/src/: database.rs  main.rs
typer/: CMakeLists.txt
typer/assets/: assets.qrc
typer/src/: main.cpp
typer/src/common/: Constants.h  Network.cpp  Network.h  UserInfo.h  UserInfoValidation.cpp  UserInfoValidation.h
typer/src/common/result/: result.h
typer/src/common/settings/: SettingsFile.cpp  SettingsFile.h  TyperSettings.cpp  TyperSettings.h
typer/src/gui/: EnterMenu.cpp  EnterMenu.h  MainWindow.cpp  MainWindow.h  SettingsWidget.cpp  TextEditRenderer.cpp  TextEditRenderer.h  TypeResultWidget.cpp  TypeResultWidget.h  TypeResultWidget.ui  TyperWidget.cpp  TyperWidget.h  TypingFinishWidget.cpp  TypingFinishWidget.h
typer/src/gui/auth/: AuthentificationDialog.cpp  AuthentificationDialog.h  AuthentificationWidget.cpp  AuthentificationWidget.h  InputGroupBox.h  RegistrationDialog.cpp  RegistrationDialog.h  RegistrationWidget.cpp  RegistrationWidget.h
typer_auth/: Makefile  go.mod  go.sum
typer_auth/cmd/auth/: main.go
typer_auth/configs/: test_config.toml
typer_auth/internal/auth_config/: config.go
typer_auth/internal/auth_service/: auth_service.go
typer_auth/internal/database/: database.go
typer_auth/internal/model/: user.go
