[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.4.10"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.postgres]
version = "0.19.4"

[dependencies.rand]
version = "0.6.0"